# RePKG_GUI

./: .gitignore  Extract.py  LICENSE  Locate.py  LocateWE.py  README.en.md  README.md  RePKG_GUI.spec  app_services.py  app_state.py  config.example.json  config.json  errors.txt  info.csv  locate.py  logs.txt  main.py  output_path.txt  path.txt  pyproject.toml  requirements.txt  test.py
.github/workflows/: release.yml
repkg_gui/: __init__.py  app_context.py  app_metadata.py  bootstrap.py  image_utils.py  theme.py
repkg_gui/controllers/: __init__.py  extraction_controller.py  library_controller.py  settings_controller.py
repkg_gui/domain/: __init__.py  entities.py  enums.py
repkg_gui/models/: __init__.py  catalog_filter_proxy.py  catalog_table_model.py  selection_model.py  thumbnail_cache.py
repkg_gui/services/: __init__.py  catalog_service.py  extraction_service.py  runtime_compat.py  steam_locator_service.py
repkg_gui/state/: __init__.py  session_state.py
repkg_gui/ui/: __init__.py  main_window.py
repkg_gui/ui/dialogs/: __init__.py  progress_dialog.py  steam_path_dialog.py
repkg_gui/ui/pages/: __init__.py  about_page.py  help_page.py  library_page.py  settings_page.py
repkg_gui/ui/widgets/: __init__.py  details_panel.py  filter_bar.py  status_strip.py  steam_path_selector.py  thumbnail_view.py
repkg_gui/workers/: __init__.py  extraction_worker.py  thumbnail_loader.py
scripts/: build-release.ps1
