[project]
name = "repkg-gui"
version = "1.0.0"
description = "Windows RePKG desktop GUI built with PySide6 for browsing and extracting local Wallpaper Engine Workshop wallpapers."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas",
    "Pillow",
    "PySide6>=6.8,<7",
    "pywin32",
    "scandir",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.15.0",
]
